Creation of contact-message APIs and EMail Notification
